// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches default snapshot 1`] = `
<div>
  <footer
    class="footer"
  >
    <h1>
      Hello Fren
    </h1>
  </footer>
</div>
`;

exports[`Footer when scrollShadowVisible is true matches styled snapshots 1`] = `
<div>
  <footer
    class="footer footerShadow"
  >
    <h1>
      Hello Fren
    </h1>
  </footer>
</div>
`;
